#16: advance exception handling and filtering