@@ -5,6 +5,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ProblemDetail;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -15,16 +16,17 @@ import org.springframework.web.servlet.resource.NoResourceFoundException;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
+  private static final String ABOUT_BLANK = "about:blank";
+
   @ExceptionHandler(NotFoundApiException.class)
   public ProblemDetail handleNotFound(NotFoundApiException ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.NOT_FOUND, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Not Found");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -33,7 +35,7 @@ public class GlobalExceptionHandler {
   @ExceptionHandler(BadRequestApiException.class)
   public ProblemDetail handleBadRequest(BadRequestApiException ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Bad Request");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -42,7 +44,7 @@ public class GlobalExceptionHandler {
   @ExceptionHandler(ConflictApiException.class)
   public ProblemDetail handleConflict(ConflictApiException ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.CONFLICT, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Conflict");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -51,7 +53,7 @@ public class GlobalExceptionHandler {
   @ExceptionHandler(UnauthorizedApiException.class)
   public ProblemDetail handleUnauthorized(UnauthorizedApiException ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.UNAUTHORIZED, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Unauthorized");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -60,17 +62,8 @@ public class GlobalExceptionHandler {
   @ExceptionHandler(ForbiddenApiException.class)
   public ProblemDetail handleForbidden(ForbiddenApiException ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.FORBIDDEN, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Forbidden");
-    problemDetail.setInstance(URI.create(requestPath(request)));
-    return problemDetail;
-  }
-
-  @ExceptionHandler(InternalServerApiException.class)
-  public ProblemDetail handleInternalServer(InternalServerApiException ex, WebRequest request) {
-    ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
-    problemDetail.setTitle("Internal Server Error");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
   }
@@ -78,7 +71,7 @@ public class GlobalExceptionHandler {
   @ExceptionHandler(AuthenticationUserNotFoundException.class)
   public ProblemDetail handleAuthenticationUserNotFound(AuthenticationUserNotFoundException ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.UNAUTHORIZED, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Unauthorized");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -90,25 +83,27 @@ public class GlobalExceptionHandler {
         HttpStatus.BAD_REQUEST,
         "Request body validation failed."
     );
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Request Validation Failed");
     problemDetail.setInstance(URI.create(requestPath(request)));
     List<String> errors = ex.getBindingResult()
         .getFieldErrors()
         .stream()
         .map(error -> error.getField() + ": " + error.getDefaultMessage())
-        .collect(Collectors.toList());
+        .toList();
     problemDetail.setProperty("errors", errors);
     return problemDetail;
   }
 
-  @ExceptionHandler({
-      MethodArgumentTypeMismatchException.class,
-      MissingServletRequestParameterException.class
-  })
+  @ExceptionHandler(
+      {
+          MethodArgumentTypeMismatchException.class,
+          MissingServletRequestParameterException.class
+      }
+  )
   public ProblemDetail handleRequestBindingException(Exception ex, WebRequest request) {
     ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, ex.getMessage());
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Request Binding Failed");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -120,7 +115,7 @@ public class GlobalExceptionHandler {
         HttpStatus.NOT_FOUND,
         "Resource '%s' was not found.".formatted(ex.getResourcePath())
     );
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Resource Not Found");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -132,7 +127,7 @@ public class GlobalExceptionHandler {
         HttpStatus.FORBIDDEN,
         "Access to '%s' is forbidden.".formatted(requestPath(request))
     );
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Access Denied");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
@@ -144,8 +139,20 @@ public class GlobalExceptionHandler {
         HttpStatus.UNAUTHORIZED,
         "Authentication for '%s' failed.".formatted(requestPath(request))
     );
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Authentication Failed");
+    problemDetail.setInstance(URI.create(requestPath(request)));
+    return problemDetail;
+  }
+
+  @ExceptionHandler(AuthenticationException.class)
+  public ProblemDetail handleAuthentication(AuthenticationException ex, WebRequest request) {
+    ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(
+        HttpStatus.UNAUTHORIZED,
+        "Authentication is required to access '%s'.".formatted(requestPath(request))
+    );
+    problemDetail.setType(URI.create(ABOUT_BLANK));
+    problemDetail.setTitle("Unauthorized");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
   }
@@ -158,7 +165,7 @@ public class GlobalExceptionHandler {
         HttpStatus.INTERNAL_SERVER_ERROR,
         "An unexpected error occurred for '%s'.".formatted(requestPath(request))
     );
-    problemDetail.setType(URI.create("about:blank"));
+    problemDetail.setType(URI.create(ABOUT_BLANK));
     problemDetail.setTitle("Internal Server Error");
     problemDetail.setInstance(URI.create(requestPath(request)));
     return problemDetail;
